# dfunk_contracts

./: .gitignore  4080-airdrop-whitelist.json  README.md
contracts/: defaults.env
contracts/luna-distributor/: Cargo.toml  README.md
contracts/luna-distributor/examples/: schema.rs
contracts/luna-distributor/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/luna-distributor/src/: contract.rs  error.rs  msg.rs  multitest.rs  state.rs
contracts/luna-distributor/src/multitest/: burn_the_bottom.rs  config.rs  contract.rs  deposit.rs  distribute.rs  suite.rs  withdraw.rs
contracts/luna-distributor/whitelist/: airdrop.json
