[package]
name = "luna-distributor"
version = "0.1.0"
authors = ["Jakub Bogucki <software_solutions>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "0.16.2"
cosmwasm-storage = "0.16.2"
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
