[package]
name = "luna-distributor"
version = "0.1.0"
authors = ["Jakub Bogucki <software_solutions>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "0.16"
cosmwasm-storage = "0.16"
cw-storage-plus = "0.9.2"
cw2 = "0.9.2"
schemars = "0.8"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "0.16"
terra-multi-test = {git="https://github.com/astroport-fi/terra-plus", rev="e0dcab33c0a414c6cfb2c24b78ddc606f574325f", package = "terra-multi-test"}
